Updated for MyCalculator APP

--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,5 +1,6 @@
-#Tue Jun 19 15:53:44 IST 2018
+#** GENERATED CONTENT ** Mule Application Deployment Descriptor
+#Wed Jun 20 13:42:37 IST 2018
+redeployment.enabled=true
 encoding=UTF-8
 domain=default
-redeployment.enabled=true
-config.resources=AddressSuggestAndCalculater.xml,addresssuggestwithcalculator.xml
+config.resources=Calculater.xml
